# ipxe-boot-lab

./: LICENSE  Procfile  README.md  create.sh  dnsmasq.sh  enter.sh  namespace-networking.sh  network-setup-slirp.sh  network-setup.sh  network-up.sh  nix-netboot-serve.sh  shell.nix  vm.py  vm.sh
.github/workflows/: ci.yml
metadata-api/: metadata.json
nix/: sources.json
vm/: Cargo.toml  build.rs
vm/src/: cli.rs  dhcp.rs  interface.rs  main.rs  meta.rs  network-up.sh
vm/src/tty_handler/: manual.rs  mod.rs  stdout.rs  tmux.rs
