[package]
name = "vm"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
qapi = { version = "0.8.0", features = [ "qmp" ] }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
tempfile = "3.2.0"
structopt = { version = "0.3.23", default-features = false }
